alpm-types/src/version/snapshots/pkg_minimal::minimal_version_from_str_parse_error@case_08_starts_with_dash.snap
---
source: alpm-types/src/version/pkg_minimal.rs
---
error: invalid character
 | 
 | -1foo:1
 | ^ expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
 | 
 = while parsing:
   minimal alpm-package-version: (-1foo:1)
   └ alpm-pkgver: (-1foo:1)
     → invalid character
     → expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
